@@ -1,4 +1,5 @@
 import {
+  boolean,
   jsonb,
   pgTable,
   primaryKey,
@@ -31,6 +32,14 @@ export const uploaded_files = pgTable("uploaded_files", {
   created_at: timestamp("created_at").defaultNow().notNull(),
 });
 
+export const sent_files = pgTable("sent_files", {
+  id: uuid("id").primaryKey().defaultRandom(),
+  message_id: text("message_id").notNull(),
+  bot_id: uuid("bot_id").references(() => bots.id , { onDelete: 'cascade' }).notNull(),
+  chat_id: text("chat_id").notNull(),
+  created_at: timestamp("created_at").defaultNow().notNull()
+});
+
 export const registered_channels = pgTable("registered_channels", {
   id: uuid("id").primaryKey().defaultRandom(),
   channel_id: text().notNull().unique(),
@@ -47,23 +56,26 @@ export const bots = pgTable("bots", {
 
 export const bot_channels = pgTable("bot_channels", {
   bot_id: uuid("bot_id").references(() => bots.id).notNull(),
-  channel_id: uuid("channel_id").references(() => registered_channels.id, { onDelete: "cascade" }).notNull(),
+  channel_id: uuid("channel_id").references(() => registered_channels.id, {
+    onDelete: "cascade",
+  }).notNull(),
   added_at: timestamp("added_at").defaultNow().notNull(),
   created_at: timestamp("created_at").defaultNow().notNull(),
 }, (table) => [
   primaryKey({ columns: [table.bot_id, table.channel_id] }),
 ]);
 
-export const user_bots = pgTable("user_bots" , {
+export const user_bots = pgTable("user_bots", {
   id: uuid("id").primaryKey().defaultRandom(),
   user_telegram_id: text("user_telegram_id").notNull(),
   bot_id: uuid("bot_id").references(() => bots.id).notNull(),
   status: text("status").default("pending").notNull(),
-  upload_step: jsonb("upload_step").$type<{ status: string , data?: any }>().default({ status: "idle" , data: "" }).notNull(),
+  upload_step: jsonb("upload_step").$type<{ status: string; data?: any }>()
+    .default({ status: "idle", data: "" }).notNull(),
   created_at: timestamp("created_at").defaultNow().notNull(),
 }, (table) => [
-  unique("user_bot_unique_id").on(table.bot_id, table.user_telegram_id)
-])
+  unique("user_bot_unique_id").on(table.bot_id, table.user_telegram_id),
+]);
 
 //Many channels to one both
 export const bots_relations = relations(
@@ -81,7 +93,6 @@ export const registered_channels_relations = relations(
   }),
 );
 
-
 // Join table for bot and channel relations
 export const bot_channels_relations = relations(bot_channels, ({ one }) => ({
   bot: one(bots, {
@@ -94,9 +105,9 @@ export const bot_channels_relations = relations(bot_channels, ({ one }) => ({
   }),
 }));
 
-export const user_bot_relations = relations(user_bots , ({ one }) => ({
-  bot: one(bots , {
+export const user_bot_relations = relations(user_bots, ({ one }) => ({
+  bot: one(bots, {
     fields: [user_bots.bot_id],
-    references: [bots.id]
-  })
-}))
+    references: [bots.id],
+  }),
+}));
